--- a/src/app/drivetrain-module-details/drivetrain-module-details.component.scss
+++ b/src/app/drivetrain-module-details/drivetrain-module-details.component.scss
@@ -2,3 +2,11 @@
   display: block;
   padding: 32px;
 }
+
+.override-user-badge {
+  vertical-align: middle;
+  padding: 2px 4px;
+  border-radius: 4px;
+  font-size: 12px;
+  display: inline-block;
+}
